# arch-manwarn

./: .gitignore  Cargo.toml  PKGBUILD  README.md  arch-manwarn-0.1.0-1-x86_64.pkg.tar.zst  arch-manwarn-debug-0.1.0-1-x86_64.pkg.tar.zst  arch-manwarn-dev.json
.github/workflows/: rust.yml
hooks/: 00-arch-manwarn.hook  arch-manwarn.hook
man/: arch-manwarn.1
pkg/arch-manwarn/: .BUILDINFO  .MTREE  .PKGINFO
pkg/arch-manwarn-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/arch-manwarn/usr/share/doc/arch-manwarn/: README.md
src/: cache.rs  config.rs  main.rs  rss.rs
src/arch-manwarn-0.1.0/: README.md
src/arch-manwarn-0.1.0/src/: rss.rs
src/test/: mod.rs
src/tests/: match_entries_test.rs  mod.rs
