[package]
name = "arch-manwarn"
version = "1.0.0"
description = "A tool to monitor Arch Linux news for manual intervention entries."
license = "UNLICENSE"
repository = "https://github.com/nlion/arch-manwarn"
authors = ["nlion <nlion@nlion.nl>"]
edition = "2021"


[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"


[dependencies]
reqwest = { version = "0.12.22", default-features = false, features = [ "native-tls"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
once_cell = "1.21.3"
toml = "0.9.2"
html2text = "0.15.2"
rss = { version = "2.0.12", default-features = false }
