[package]
name = "arch-manwarn"
version = "1.1.0"
description = "A tool to monitor Arch Linux news for manual intervention entries."
license = "UNLICENSE"
repository = "https://github.com/nlion/arch-manwarn"
authors = ["nlion <nlion@nlion.nl>"]
edition = "2024"


[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
once_cell = "1.21.3"
toml = "0.9.4"
nanohtml2text = "0.2.1"
rss = { version = "2.0.12", default-features = false }
minreq = { version = "2.14.0", features = ["https-native"] }
rayon = "1.11.0"

[dev-dependencies]
simple-semaphore = "0.2.0"
